tests/v2.1-legacy/invalid/missing_ref.aif
# VIOLATION: REF field is absent
# Expected: rejected — REF is required (use - if no reference)

@AIF/2.0
FROM: agent_pm
TO: agent_rd
TYPE: TASK
ID: T001
REPORT_TO: agent_pm
---
GOAL: "Do something"
PRIORITY: MED
